ADD store ,employee and login

--- a/FashionShop-Admin/Views/Categories/Index.cshtml
+++ b/FashionShop-Admin/Views/Categories/Index.cshtml
@@ -9,7 +9,8 @@ ViewBag.Title = "Categories List";
 <link rel="stylesheet" href="~/plugin/datatables/dataTables.bootstrap5.min.css">
 }
 @section Scripts{
-<script src="~/bundles/dataTables.bundle.js"></script>
+    <script src="~/bundles/dataTables.bundle.js"></script>
+    <script src="~/js/template.js"></script>
 <script>
     $('#myDataTable')
         .addClass( 'nowrap' )
