--- a/FashionShop-Admin/Views/Dashboard/Index.cshtml
+++ b/FashionShop-Admin/Views/Dashboard/Index.cshtml
@@ -7,6 +7,8 @@
 }
 @section Scripts{
     <!-- Plugin Js -->
+    <script src="~/bundles/apexcharts.bundle.js"></script>
+    <script src="~/js/page/index.js"></script>
 <script src="~/bundles/dataTables.bundle.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1Jr7axGGkwvHRnNfoOzoVRFV3yOPHJEU&amp;callback=myMap"></script>
 <script>
