--- a/FashionShop-Admin/Views/_ViewImports.cshtml
+++ b/FashionShop-Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using FashionShop
 @using FashionShop.Models
+@using FashionShop.Models.views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
