--- a/FashionShop-Admin/Views/Shared/_Layout.cshtml
+++ b/FashionShop-Admin/Views/Shared/_Layout.cshtml
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <!-- plugin css file  -->
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- SweetAlert2  -->
+
     <link rel="stylesheet" href="~/css/themify-icons/themify-icons.css">
     <!-- project css file  -->
     <link rel="stylesheet" href="~/css/ebazar.style.min.css">
