--- a/FashionShop-Admin/Views/Shared/Components/Header/Default.cshtml
+++ b/FashionShop-Admin/Views/Shared/Components/Header/Default.cshtml
@@ -1,42 +1,11 @@
-﻿
+﻿@model HeaderViewModel
 <!-- Body: Header -->
             <div class="header">
                 <nav class="navbar py-4">
                     <div class="container-xxl">
-
                         <!-- header rightbar icon -->
+                           @await Html.PartialAsync("Notification");`
                         <div class="h-right d-flex align-items-center mr-5 mr-lg-0 order-1">
-                            <div class="d-flex">
-                                <a class="nav-link text-primary collapsed" href="help.html" title="Get Help">
-                                    <i class="icofont-info-square fs-5"></i>
-                                </a>
-                            </div>
-                            <div class="dropdown zindex-popover">
-                                <a class="nav-link dropdown-toggle pulse" href="#" role="button" data-bs-toggle="dropdown">
-                                    <img src="~/images/flag/GB.png" alt="">
-                                </a>
-                                <div class="dropdown-menu rounded-lg shadow border-0 dropdown-animation dropdown-menu-md-end p-0 m-0 mt-3">
-                                    <div class="card border-0">
-                                        <ul class="list-unstyled py-2 px-3">
-                                            <li>
-                                                <a href="#" class=""><img src="~/images/flag/GB.png" alt=""> English</a>
-                                            </li>
-                                            <li>
-                                                <a href="#" class=""><img src="~/images/flag/DE.png" alt=""> German</a>
-                                            </li>
-                                            <li>
-                                                <a href="#" class=""><img src="~/images/flag/FR.png" alt=""> French</a>
-                                            </li>
-                                            <li>
-                                                <a href="#" class=""><img src="~/images/flag/IT.png" alt=""> Italian</a>
-                                            </li>
-                                            <li>
-                                                <a href="#" class=""><img src="~/images/flag/RU.png" alt=""> Russian</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="dropdown notifications">
                                 <a class="nav-link dropdown-toggle pulse" href="#" role="button" data-bs-toggle="dropdown">
                                     <i class="icofont-alarm fs-5"></i>
@@ -116,7 +85,7 @@
                             </div>
                             <div class="dropdown user-profile ml-2 ml-sm-3 d-flex align-items-center zindex-popover">
                                 <div class="u-info me-2">
-                                    <p class="mb-0 text-end line-height-sm "><span class="font-weight-bold">John Quinn</span></p>
+                                    <p class="mb-0 text-end line-height-sm "><span class="font-weight-bold">@Model.Name</span></p>
                                     <small>Admin Profile</small>
                                 </div>
                                 <a class="nav-link dropdown-toggle pulse p-0" href="#" role="button" data-bs-toggle="dropdown" data-bs-display="static">
@@ -128,8 +97,8 @@
                                             <div class="d-flex py-1">
                                                 <img class="avatar rounded-circle" src="~/images/profile_av.svg" alt="profile">
                                                 <div class="flex-fill ms-3">
-                                                    <p class="mb-0"><span class="font-weight-bold">John Quinn</span></p>
-                                                    <small class="">Johnquinn@gmail.com</small>
+                                                    <p class="mb-0"><span class="font-weight-bold">@Model.Name</span></p>
+                                                    <small class="">@(Model.Email ?? "email is valid")</small>
                                                 </div>
                                             </div>
 
@@ -138,7 +107,9 @@
                                         <div class="list-group m-2 ">
                                             <a href="admin-profile.html" class="list-group-item list-group-item-action border-0 "><i class="icofont-ui-user fs-5 me-3"></i>Profile Page</a>
                                             <a href="order-invoices.html" class="list-group-item list-group-item-action border-0 "><i class="icofont-file-text fs-5 me-3"></i>Order Invoices</a>
-                                            <a href="ui-elements/auth-signin.html" class="list-group-item list-group-item-action border-0 "><i class="icofont-logout fs-5 me-3"></i>Signout</a>
+                                            <a asp-action="Logout" asp-controller="Authenticate" class="list-group-item list-group-item-action border-0 ">
+                                                <i class="icofont-logout fs-5 me-3"></i>Signout
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
