--- a/FashionShop-Admin/Views/Employees/Create.cshtml
+++ b/FashionShop-Admin/Views/Employees/Create.cshtml
@@ -50,6 +50,42 @@
             });
         });
     </script>
+    <script>
+        const debounce = (func,delay = 1500) => {
+            let timer;
+            return function (...args){
+                clearTimeout(timer);
+                timer = setTimeout(function (){
+                    func.apply(this,args);
+                },delay);
+            }
+        }
+        const handleEmailInput = debounce(
+            (event) => {
+                $.ajax({
+                    url: "@Url.Action("CheckUniqueEmail","Employees")",
+                    method: "POST",
+                    data:{
+                        email : event.target.value
+                    },
+                    success: (res) =>{
+                        if (res.statusCode === 200){
+                            $("#Email-error").text(res.value.message);
+                            $("#btn-save").prop("disabled",true);
+                        }else{
+                            $("#Email-error").text("");
+                            $("#btn-save").prop("disabled",false);
+                        }
+                    },
+                    error: (err) => {
+                        console.log(err);
+                    }
+                })
+            }
+        )
+        $("#Email").on("input",handleEmailInput)
+    
+    </script>
 }
 <!-- Body: Body -->
             <div class="body d-flex py-3">
@@ -60,7 +96,7 @@
                             <div class="border-0 mb-4">
                                 <div class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
                                     <h3 class="fw-bold mb-0">Employees Add</h3>
-                                    <button type="submit" class="btn btn-primary py-2 px-5 text-uppercase btn-set-task w-sm-100">Save</button>
+                                    <button type="submit" id="btn-save" class="btn btn-primary py-2 px-5 text-uppercase btn-set-task w-sm-100">Save</button>
                                 </div>
                             </div>
                         </div> <!-- Row end  -->
@@ -140,7 +176,7 @@
                                             <div class="col-md-6">
                                                 <label class="form-label" for="Email">Email</label>
                                                 <input type="text" class="form-control" asp-for="Email" id="Email" tabindex="2">
-                                                <span asp-validation-for="Email" class="text-danger"></span>
+                                                <span asp-validation-for="Email" class="text-danger" id="Email-error"></span>
                                             </div>
                                             <div class="col-md-6">
                                                 <label class="form-label" for="Phone">Phone</label>
