Cap nhat san pham va toi uu them san pham

--- a/FashionShop-Admin/Views/Products/Index.cshtml
+++ b/FashionShop-Admin/Views/Products/Index.cshtml
@@ -10,28 +10,8 @@
 }
 @section Scripts {
     <script src="~/bundles/dataTables.bundle.js"></script>
-    <script>
-        $('#myDataTable')
-            .addClass('nowrap')
-            .dataTable({
-                responsive: true,
-                columnDefs: [
-                    { targets: [-1, -3], className: 'dt-body-right' }
-                ]
-            });
-        $('.deleterow').on('click', function () {
-            var tablename = $(this).closest('table').DataTable();
-            tablename
-                .row($(this)
-                    .parents('tr'))
-                .remove()
-                .draw();
-
-        });
-    </script>
-
    @* Xử lý cập nhật categoryID và status *@
-    <script src="~/js/updateProduct.js" type="module">
+        <script src="~/js/HandlerUpdateProduct.js" type="module">
     </script>
 }
 <!-- Body: Body -->
@@ -68,7 +48,7 @@
                             <tbody>
                                 @foreach (var product in Model?.Products)
                                 {
-                                    <tr id="@product.ProductId">
+                                        <tr id="@product.ProductId">
                                         <td><strong>#@product.ProductId</strong></td>
                                         <td>@product.ProductName</td>
                                         <td>@product.Slug</td>
@@ -94,6 +74,7 @@
                                                 {
                                                     "available" => "bg-success",
                                                     "unavailable" => "bg-warning",
+                                                    _ => "Unknown"
                                                 };
                                             }
                                             <select id="status-@(product.ProductId)" class="badge @color">
@@ -103,7 +84,7 @@
                                         </td>
                                         <td>
                                             <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                                <a href="categories-edit.html" class="btn btn-outline-secondary"><i class="icofont-edit text-success"></i></a>
+                                                <a asp-action="Edit" asp-route-id="@product.ProductId" class="btn btn-outline-secondary"><i class="icofont-edit text-success"></i></a>
                                                 <button type="button" class="btn btn-outline-secondary deleterow"><i class="icofont-ui-delete text-danger"></i></button>
                                             </div>
                                         </td>
