--- a/FashionShop-Admin/Views/Employees/Create.cshtml
+++ b/FashionShop-Admin/Views/Employees/Create.cshtml
@@ -21,6 +21,9 @@
             //Ch-editer
             ClassicEditor
                 .create( document.querySelector( '#editor' ) )
+                .options({
+                    height: 500,
+                })
                 .catch( error => {
                     console.error( error );
                 } );
@@ -84,7 +87,16 @@
             }
         )
         $("#Email").on("input",handleEmailInput)
-    
+        
+        //handle show store
+        $("#Role").on("change",function (){
+            let role = $("#Role option:selected").text().trim();
+            if (role === "Admin"){
+                $("#storeBlock").removeClass("d-none");
+            }else{
+                $("#storeBlock").addClass("d-none");
+            }
+        })
     </script>
 }
 <!-- Body: Body -->
@@ -184,8 +196,18 @@
                                                 <span asp-validation-for="Phone" class="text-danger"></span>
                                             </div>
                                             <div class="col-md-6">
+                                                <label class="form-label" for="Address">Address</label>
+                                                <input type="text" class="form-control" asp-for="Address" id="Address" tabindex="4">
+                                                <span asp-validation-for="Address" class="text-danger"></span>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label class="form-label" for="Phone">Birth</label>
+                                                <input type="date" class="form-control" asp-for="Birth" id="Birth" tabindex="5">
+                                                <span asp-validation-for="Birth" class="text-danger"></span>
+                                            </div>
+                                            <div class="col-md-6">
                                                 <label class="form-label" for="EmployeePosition">Position</label>
-                                                <select id="EmployeePosition" class="form-select" asp-for="EmployeePosition" tabindex="4">
+                                                <select id="EmployeePosition" class="form-select" asp-for="EmployeePosition" tabindex="6">
                                                     <option value="" selected></option>
                                                     <option value="manager">Manager</option>
                                                     <option value="sales">Sales</option>
@@ -210,19 +232,25 @@
                                                 </select>
                                                 <span asp-validation-for="RoleId" class="text-danger"></span>
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="col-md-6 d-none" id="storeBlock">
                                                 <label for="Store" class="form-label">Stores</label>
                                                 <select id="Store" class="form-select" asp-for="StoreId">
                                                     <option value="" selected>Choose a store </option>
-                                                       @if (Model.Stores != null)
+                                                    @if (Model.Stores != null)
+                                                    {
+                                                        @foreach (var store in Model.Stores)
                                                         {
-                                                            @foreach (var store in Model.Stores)
-                                                            {
-                                                                <option value="@store?.StoreId">@store?.StoreName</option>
-                                                            }
+                                                            <option value="@store?.StoreId">@store?.StoreName</option>
                                                         }
+                                                    }
                                                 </select>
                                                 <span asp-validation-for="StoreId" class="text-danger"></span>
+                                            </div>
+                                            <div>
+                                                <label for="Description">Description</label>
+                                                <textarea id="editor" asp-for="Description">
+                                                    <h4>Enter your desciption</h4>
+                                                </textarea>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="Password" class="form-label">Password</label>
@@ -232,7 +260,7 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="ConfirmPassword" class="form-label">Confirm Password</label>
-                                                <input type="password" class="form-control" asp-for="ConfirmPassword" id="ConfirmPassword" tabindex="6">
+                                                <input type="password" class="form-control" asp-for="ConfirmPassword" id="ConfirmPassword" tabindex="7">
                                                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
 
                                             </div>
