--- a/FashionShop-Admin/Views/Employees/Index.cshtml
+++ b/FashionShop-Admin/Views/Employees/Index.cshtml
@@ -57,6 +57,9 @@
                                 <th>Position</th>
                                 <th>Phone</th>
                                 <th>Email</th>
+                                <th>Birth</th>
+                                <th>Description</th>
+                                <th>Address</th>
                                 <th>Role</th>
                                 <th>Store</th>
                                 <th>CreatedDate</th>
@@ -79,6 +82,11 @@
                                     <td>@employee.EmployeePosition</td>
                                     <td>@employee.Phone</td>
                                     <td>@employee.Email</td>
+                                    <th>@employee.Birth</th>
+                                    <th class="align-content-center">
+                                        @Html.Raw(employee.Description)
+                                    </th>
+                                    <th>@employee.Address</th>
                                     <td>@employee.Role?.RoleName</td>
                                     <td>@employee.Store?.StoreName</td>
                                     <td>@employee.CreatedAt</td>
@@ -96,6 +104,7 @@
                                     </td>
                                     <td>
                                         <div class="btn-group" role="group" aria-label="Basic outlined example">
+                                            <a asp-action="Edit" asp-route-id="@employee.EmployeeId" class="btn btn-outline-secondary"><i class="icofont-edit text-success"></i></a>
                                             <button type="button" class="btn btn-outline-secondary deleterow"><i class="icofont-ui-delete text-danger"></i></button>
                                         </div>
                                     </td>
