--- a/FashionShop-Admin/Views/Shared/Notification.cshtml
+++ b/FashionShop-Admin/Views/Shared/Notification.cshtml
@@ -5,27 +5,41 @@
     {
         "Success" => "bg-success",
         "Error" => "bg-danger",
+        "Warning" => "bg-warning",
         _ => "warning"
     };
     
 }
 @if (TempData[nameof(NotificationTypes.Success)] != null)
 {
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-body @notification">
+    <div class="toast show position-fixed align-items-center text-bg-primary border-0 bg-success " style="bottom: 50px; right: 50px;z-index: 1000" role="alert" aria-live="assertive" aria-atomic="true" >
+        <div class="d-flex">
+            <div class="toast-body">
                 @TempData[nameof(NotificationTypes.Success)]
             </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
-    </div> 
+    </div>
 }
 @if (TempData[nameof(NotificationTypes.Error)] != null)
 {
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
-        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-body @notification">
+    <div class="toast show position-fixed align-items-center text-bg-primary border-0 bg-danger " style="bottom: 50px; right: 50px;z-index: 1000" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+            <div class="toast-body">
                 @TempData[nameof(NotificationTypes.Error)]
             </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto bg-white text-black" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+    </div>
+}
+@if (TempData[nameof(NotificationTypes.Warning)] != null)
+{
+    <div class="toast show position-fixed align-items-center text-bg-primary border-0 bg-warning " style="bottom: 50px; right: 50px;z-index: 1000" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+            <div class="toast-body">
+                @TempData[nameof(NotificationTypes.Warning)]
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto bg-white text-black" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
     </div>
 }
