--- a/FashionShop-Admin/Views/Shared/Partials/ChangePassword.cshtml
+++ b/FashionShop-Admin/Views/Shared/Partials/ChangePassword.cshtml
@@ -13,14 +13,14 @@
                 <div class="col-md-6">
                     <input type="password" class="form-control" asp-for="Password" id="Password">
                 </div>
-                <span data-valmsg-for="0" class="text-danger"></span>
+                <span data-valmsg-for="password-0" class="text-danger"></span>
             </div>
             <div class="col-12">
                 <label class="form-label col-6 col-sm-5">New Password:</label>
                 <div class="col-md-6">
                     <input type="password" class="form-control" asp-for="NewPassword" id="NewPassword">
                 </div>
-                <span data-valmsg-for="1" class="text-danger"></span>
+                <span data-valmsg-for="password-1" class="text-danger"></span>
                 
             </div>
             <div class="col-12">
@@ -28,7 +28,7 @@
                 <div class="col-md-6">
                     <input type="password" class="form-control" asp-for="ConfirmPassword" id="ConfirmPassword">
                 </div>
-                <span data-valmsg-for="3" class="text-danger"></span> 
+                <span data-valmsg-for="password-2" class="text-danger"></span> 
             </div>
         </div>
     </div>
